tests/negative/runtime/imported_array_oob/bad.ci
void trigger() {
    int[] xs = [1, 2, 3];
    print(toString(xs[5]) + "\n");
}
